# backend/docs/swagger.yaml
@@ -1,5 +1,33 @@
 basePath: /api
 definitions:
+  dto.BotCreateRequest:
+    properties:
+      description:
+        type: string
+      name:
+        type: string
+      status:
+        type: string
+      token:
+        type: string
+    type: object
+  dto.BotResponse:
+    properties:
+      created_at:
+        type: string
+      description:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      owner_user_id:
+        type: integer
+      status:
+        type: string
+      updated_at:
+        type: string
+    type: object
   dto.ErrorResponse:
     properties:
       error:
@@ -23,6 +51,37 @@ info:
   title: TG Bot Creator
   version: "1.0"
 paths:
+  /bot/create:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: bot creation request
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/dto.BotCreateRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.BotResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Create new Telegram bot
+      tags:
+      - bot
   /user/sign-in:
     post:
       consumes:
